fixed packages alignment for larger screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,6 +189,10 @@ header nav li {
     padding: 50px;
     flex-basis: 50%;
     text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .packages .grid li i {
     color: #8c9eff;
